# shot-shaker

./: CHANGELOG.md  README.md  pyproject.toml  setup.ms
shot_shaker/: core.py  gui.py  lib.py  setup.py
tests/: test_gui.py
